<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>com.icuxika</groupId>
    <artifactId>JavaFX-Package-Sample</artifactId>
    <version>1.0.0</version>

    <properties>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <maven.compiler.release>17</maven.compiler.release>
        <javafx.version>17.0.0.1</javafx.version>
    </properties>

    <dependencies>
        <dependency>
            <groupId>org.openjfx</groupId>
            <artifactId>javafx-base</artifactId>
            <version>${javafx.version}</version>
        </dependency>
        <dependency>
            <groupId>org.openjfx</groupId>
            <artifactId>javafx-controls</artifactId>
            <version>${javafx.version}</version>
        </dependency>
        <dependency>
            <groupId>org.openjfx</groupId>
            <artifactId>javafx-graphics</artifactId>
            <version>${javafx.version}</version>
        </dependency>
        <dependency>
            <groupId>org.openjfx</groupId>
            <artifactId>javafx-fxml</artifactId>
            <version>${javafx.version}</version>
        </dependency>
        <dependency>
            <groupId>org.openjfx</groupId>
            <artifactId>javafx-swing</artifactId>
            <version>${javafx.version}</version>
        </dependency>
        <dependency>
            <groupId>org.openjfx</groupId>
            <artifactId>javafx-media</artifactId>
            <version>${javafx.version}</version>
        </dependency>
        <dependency>
            <groupId>org.openjfx</groupId>
            <artifactId>javafx-web</artifactId>
            <version>${javafx.version}</version>
        </dependency>
        <dependency>
            <groupId>com.jfoenix</groupId>
            <artifactId>jfoenix</artifactId>
            <version>9.0.10</version>
        </dependency>
    </dependencies>
    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.8.1</version>
                <configuration>
                    <release>${maven.compiler.release}</release>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-dependency-plugin</artifactId>
                <version>3.1.2</version>
                <executions>
                    <execution>
                        <id>copy-dependencies</id>
                        <phase>package</phase>
                        <goals>
                            <goal>copy-dependencies</goal>
                        </goals>
                        <configuration>
                            <outputDirectory>${project.build.directory}/alternateLocation</outputDirectory>
                            <overWriteReleases>false</overWriteReleases>
                            <overWriteSnapshots>false</overWriteSnapshots>
                            <overWriteIfNewer>true</overWriteIfNewer>
                        </configuration>
                    </execution>
                </executions>
            </plugin>
            <plugin>
                <groupId>org.codehaus.mojo</groupId>
                <artifactId>exec-maven-plugin</artifactId>
                <version>3.0.0</version>
                <executions>
                    <execution>
                        <id>image</id>
                        <goals>
                            <goal>exec</goal>
                        </goals>
                        <configuration>
                            <executable>jpackage</executable>
                            <workingDirectory>${project.basedir}</workingDirectory>
                            <arguments>
                                <argument>-n</argument>
                                <argument>JavaFXSample</argument>
                                <argument>-t</argument>
                                <argument>app-image</argument>
                                <argument>--java-options</argument>
                                <argument>
                                    --add-exports=javafx.controls/com.sun.javafx.scene.control.behavior=com.jfoenix
                                </argument>
                                <argument>-p</argument>
                                <argument>
                                    ${project.build.directory}/alternateLocation${path.separator}${project.build.directory}/${project.artifactId}-${project.version}.jar
                                </argument>
                                <argument>-d</argument>
                                <argument>${project.build.directory}/mvnPackage</argument>
                                <argument>-m</argument>
                                <argument>sample/com.icuxika.MainApp</argument>
                                <argument>--icon</argument>
                                <argument>
                                    ${project.basedir}/src/main/resources/application.icns
                                </argument>
                                <argument>--app-version</argument>
                                <argument>1.0.0</argument>
                            </arguments>
                        </configuration>
                    </execution>
                    <execution>
                        <id>installer</id>
                        <goals>
                            <goal>exec</goal>
                        </goals>
                        <configuration>
                            <executable>jpackage</executable>
                            <workingDirectory>${project.basedir}</workingDirectory>
                            <arguments>
                                <argument>-n</argument>
                                <argument>JavaFXSample</argument>
                                <argument>-t</argument>
                                <argument>dmg</argument>
                                <argument>--java-options</argument>
                                <argument>
                                    --add-exports=javafx.controls/com.sun.javafx.scene.control.behavior=com.jfoenix
                                </argument>
                                <argument>-p</argument>
                                <argument>
                                    ${project.build.directory}/alternateLocation${path.separator}${project.build.directory}/${project.artifactId}-${project.version}.jar
                                </argument>
                                <argument>-d</argument>
                                <argument>${project.build.directory}/mvnInstaller</argument>
                                <argument>-m</argument>
                                <argument>sample/com.icuxika.MainApp</argument>
                                <argument>--icon</argument>
                                <argument>
                                    ${project.basedir}/src/main/resources/application.icns
                                </argument>
                                <argument>--app-version</argument>
                                <argument>1.0.0</argument>
                            </arguments>
                        </configuration>
                    </execution>
                </executions>
            </plugin>
            <plugin>
                <groupId>org.openjfx</groupId>
                <artifactId>javafx-maven-plugin</artifactId>
                <version>0.0.5</version>
                <configuration>
                    <stripDebug>true</stripDebug>
                    <compress>2</compress>
                    <noHeaderFiles>true</noHeaderFiles>
                    <noManPages>true</noManPages>
                    <launcher>JavaFXSample</launcher>
                    <jlinkImageName>build-link</jlinkImageName>
                    <jlinkZipName>sample-zip</jlinkZipName>
                    <mainClass>sample/com.icuxika.MainApp</mainClass>
                    <options>
                        <option>--add-exports</option>
                        <option>javafx.controls/com.sun.javafx.scene.control.behavior=com.jfoenix</option>
                    </options>
                </configuration>
            </plugin>
            <plugin>
                <groupId>com.gluonhq</groupId>
                <artifactId>gluonfx-maven-plugin</artifactId>
                <version>1.0.7</version>
                <configuration>
                    <mainClass>com.icuxika.MainApp</mainClass>
                    <nativeImageArgs>
                        <nativeImageArg>
                            --allow-incomplete-classpath
                        </nativeImageArg>
                    </nativeImageArgs>
                </configuration>
            </plugin>
        </plugins>
    </build>
</project>